--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   </head>
   <body>
     <div id="app">
-      <div id="header"></div>
-      <div id="nav"></div>
-      <div id="article-1"></div>
-      <div id="article-2"></div>
-      <div id="ad-area"></div>
-      <div id="footer"></div>
+      <div id="header">1</div>
+      <div id="nav">2</div>
+      <div id="article-1">3</div>
+      <div id="ad-area">4</div>
+      <div id="footer">5</div>
     </div>
   </body>
 </html>
